--- a/app/globals.css
+++ b/app/globals.css
@@ -71,8 +71,8 @@ which will wrap the children in the layout */
   }
 }
 
-
-/* // Window scroll bar styling */
+/* ////////////////////////////////////////////////////////////////////// */
+/* // Window scroll bar styling - SmoothScroll component */
 .scrollbar-track-y {
   background-color: transparent !important;
   /* width: 5px !important; */
@@ -88,6 +88,7 @@ which will wrap the children in the layout */
 
 /* ////////////////////////////////////////////////////////////////////// */
 /* Website's nav bar display on scroll up */
+
 .main-tool-bar {
   transition: ease 0.4s;
 }
@@ -95,6 +96,7 @@ which will wrap the children in the layout */
   margin-top: -100px;
 }
 
+/* Hover on nav links */
 .ActiveNavLink::after {
   content: "";
 
@@ -159,8 +161,6 @@ which will wrap the children in the layout */
   animation-fill-mode: forwards;
 }
 
-/* animation used in @home/projects description, @projects cards description */
-
 @keyframes fadeIn_keyframe {
   0% { 
     opacity: 0;
@@ -172,6 +172,9 @@ which will wrap the children in the layout */
 
 
 /* ////////////////////////////////////////////////////////////////////// */
+/* ////////////////////////////////////////////////////////////////////// */
+/* Text */
+
 .Heading1 {
   @apply font-normal text-[13vw] leading-[12vw] md:text-[min(110px,8vw)] md:leading-[min(100px,7vw)] Montserrat
   color1
@@ -243,3 +246,8 @@ which will wrap the children in the layout */
 .accent2 {
   @apply text-[#9046D9]
 }
+
+
+
+
+
