Add Robot rotation on scroll, Work on Section3 (Social proof numbers)

--- a/app/globals.css
+++ b/app/globals.css
@@ -185,73 +185,153 @@ which will wrap the children in the layout */
 }
 
 .sideFadeGradient::after {
-  content: "";
+  /* content: "";
   position: absolute;
   width: 105%;
   height: 100%;
   left: -1.7rem;
-  top:0;
+  top:0; */
   /* -webkit-box-shadow: inset 0px 0px 36px 52px rgba(0,0,0,1);
   -moz-box-shadow: inset 0px 0px 36px 52px rgba(0,0,0,1);
   box-shadow: inset 0px 0px 36px 52px rgba(0,0,0,1); */
 }
 
 .valueCard1 {
-background: radial-gradient(circle at 100% 100%, #141414 0, #141414 4px, transparent 4px) 0% 0%/6px 6px no-repeat,
-            radial-gradient(circle at 0 100%, #141414 0, #141414 4px, transparent 4px) 100% 0%/6px 6px no-repeat,
-            radial-gradient(circle at 100% 0, #141414 0, #141414 4px, transparent 4px) 0% 100%/6px 6px no-repeat,
-            radial-gradient(circle at 0 0, #141414 0, #141414 4px, transparent 4px) 100% 100%/6px 6px no-repeat,
-            linear-gradient(#141414, #141414) 50% 50%/calc(100% - 4px) calc(100% - 12px) no-repeat,
-            linear-gradient(#141414, #141414) 50% 50%/calc(100% - 12px) calc(100% - 4px) no-repeat,
-            linear-gradient(136deg, rgba(23,217,255,0) 0%, #9046d9 100%);
+/* background: radial-gradient(circle at 100% 100%, #0a0a0a 0, #0a0a0a 4px, transparent 4px) 0% 0%/6px 6px no-repeat,
+            radial-gradient(circle at 0 100%, #0a0a0a 0, #0a0a0a 4px, transparent 4px) 100% 0%/6px 6px no-repeat,
+            radial-gradient(circle at 100% 0, #0a0a0a 0, #0a0a0a 4px, transparent 4px) 0% 100%/6px 6px no-repeat,
+            radial-gradient(circle at 0 0, #0a0a0a 0, #0a0a0a 4px, transparent 4px) 100% 100%/6px 6px no-repeat,
+            linear-gradient(#0a0a0a, #0a0a0a) 50% 50%/calc(100% - 4px) calc(100% - 12px) no-repeat,
+            linear-gradient(#0a0a0a, #0a0a0a) 50% 50%/calc(100% - 12px) calc(100% - 4px) no-repeat,
+            linear-gradient(136deg, #9046d900 0%, #17d8ff2a 100%);
 border-radius: 6px;
 padding: 18px;
-box-sizing: border-box;
+box-sizing: border-box; */
 }
+
 .valueCard2::before {
   /* border: 1px solid red; */
-  z-index: -1;
+  /* z-index: -1;
   content: "";
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top:2px;
-  left: 2px;
+  width: 50%;
+  height: 50%;
+  bottom: -2px;
+  right: -2px;
   border-radius: 10px;
 
   background: rgb(23,217,255);
-  background: linear-gradient(312deg, rgba(23,217,255,0.48783263305322133) 0%, rgba(134,82,220,0.20211834733893552) 15%, rgba(144,70,217,0.10127801120448177) 100%);
+  background: linear-gradient(312deg, rgba(23,217,255,0.48) 0%, rgba(134,82,220,0.2) 15%, rgba(144,70,217,0.1) 100%); */
+  /* transition: all 1s linear; */
+}
+
+.valueCard2 {
+  /* transition: all 1s linear; */
+  /* overflow: hidden; */
+  /* border: 2px solid rgba(221, 221, 221, 0.123) */
 
 }
+
+/* .valueCard2:hover {
+  background: rgb(23,217,255);
+background: linear-gradient(312deg, rgba(23,217,255,0.4) 0%, rgba(144,70,217,0.4) 100%);
+} */
+
+.valueCard2:hover::before {
+  /* width: 200%;
+  height: 200%; */
+
+}
+
+
+/* ////////////////////////////////////////////////////////////////////// */
+/* ////////////////////////////////////////////////////////////////////// */
+
+
+.border_neon1 {
+  box-shadow: 0 0 .2rem #fff,
+            0 0 .2rem #fff,
+            0 0 2rem #17D9FF,
+            0 0 0.8rem #17D9FF,
+            0 0 2.8rem #17D9FF,
+            inset 0 0 1.3rem #17D9FF; 
+  border-color: #17D9FF;
+
+}
+
+.border_neon2 {
+   box-shadow: 0 0 .2rem #fff,
+            0 0 .2rem #fff,
+            0 0 2rem #17D9FF,
+            0 0 0.8rem #17D9FF,
+            0 0 1rem #17D9FF,
+            inset 0 0 2rem #17D9FF; 
+  border-color: #17D9FF;
+
+}
+
+
+.section3_card {
+  /* border: 1px solid rgba(255, 255, 255, 0.336);
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  border-radius: 10px; */
+
+}
+
+.centered_centered2 {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  transform: translate(50%, 50%);
+}
+
+.rotate360 {
+    
+    animation: rotateAnimation 30s linear infinite;
+    will-change: transform; 
+}
+
+  @keyframes rotateAnimation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+
 
 /* ////////////////////////////////////////////////////////////////////// */
 /* ////////////////////////////////////////////////////////////////////// */
 /* Text */
 
 .Heading1 {
-  @apply font-normal text-[13vw] leading-[12vw] md:text-[min(110px,8vw)] md:leading-[min(100px,7vw)] Montserrat
+  @apply font-normal text-[13vw] leading-[12vw] md:text-[min(110px,8vw)] md:leading-[min(100px,7vw)] Montserrat text_shadow_1
   color1
 }
 
 /* section header */
 .Heading2 {
-  @apply font-normal text-[8vw] md:text-[min(55px,4vw)] Montserrat
+  @apply font-normal text-[8vw] md:text-[min(55px,4vw)] Montserrat text_shadow_1
   color1
 }
 
 /* card header */
 .Heading3 {
-  @apply font-normal text-[min(4vw,18px)] md:text-[min(24px,3vw)]
+  @apply font-normal text-[min(4vw,18px)] md:text-[min(24px,3vw)] text_shadow_1
   color1
 }
 
 .Paragraph1 {
-  @apply font-extralight text-[3vw] leading-[3vw] sm:text-[2vw] sm:leading-[2.5vw] md:text-[min(16px,2vw)] md:leading-[min(22px,2vw)] 
+  @apply font-extralight text-[3vw] leading-[3vw] sm:text-[2vw] sm:leading-[2.5vw] md:text-[min(16px,2vw)] md:leading-[min(22px,2vw)] text_shadow_2
   Poppins color3
 }
 
 .Paragraph2 {
-  @apply font-extralight text-[min(3vw,13px)] leading-[5vw] sm:text-[2vw] sm:leading-[2.5vw] md:text-[min(14px,2vw)] md:leading-[min(22px,2vw)] 
+  @apply font-extralight text-[min(3vw,13px)] leading-[5vw] sm:text-[2vw] sm:leading-[2.5vw] md:text-[min(14px,2vw)] md:leading-[min(22px,2vw)] text_shadow_1
   Poppins color1
 }
 
@@ -273,6 +353,13 @@ box-sizing: border-box;
   -webkit-text-fill-color: transparent;
 }
 
+.text_shadow_1 {
+  text-shadow: 0px 0px 8px rgba(0,0,0,0.2);
+}
+
+.text_shadow_2 {
+  text-shadow: 0px 0px 8px rgba(0,0,0,0.05);
+}
 
 .Poppins {
   @apply font-['Poppins']
